# Tag Image File Format (TIFF) Software
#
# Copyright (C) 2004, Andrey Kiselev <dron@remotesensing.org>
#
# Permission to use, copy, modify, distribute, and sell this software and 
# its documentation for any purpose is hereby granted without fee, provided
# that (i) the above copyright notices and this permission notice appear in
# all copies of the software and related documentation, and (ii) the names of
# Sam Leffler and Silicon Graphics may not be used in any advertising or
# publicity relating to the software without the specific, prior written
# permission of Sam Leffler and Silicon Graphics.
# 
# THE SOFTWARE IS PROVIDED "AS-IS" AND WITHOUT WARRANTY OF ANY KIND, 
# EXPRESS, IMPLIED OR OTHERWISE, INCLUDING WITHOUT LIMITATION, ANY 
# WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.  
# 
# IN NO EVENT SHALL SAM LEFFLER OR SILICON GRAPHICS BE LIABLE FOR
# ANY SPECIAL, INCIDENTAL, INDIRECT OR CONSEQUENTIAL DAMAGES OF ANY KIND,
# OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
# WHETHER OR NOT ADVISED OF THE POSSIBILITY OF DAMAGE, AND ON ANY THEORY OF 
# LIABILITY, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE 
# OF THIS SOFTWARE.

# Process this file with automake to produce Makefile.in.

man_MANS = \
	bmp2tiff.1 \
	fax2ps.1 \
	fax2tiff.1 \
	gif2tiff.1 \
	libtiff.3t \
	pal2rgb.1 \
	ppm2tiff.1 \
	ras2tiff.1 \
	raw2tiff.1 \
	rgb2ycbcr.1 \
	sgi2tiff.1 \
	thumbnail.1 \
	tiff2bw.1 \
	tiff2pdf.1 \
	tiff2ps.1 \
	tiff2rgba.1 \
	TIFFbuffer.3t \
	TIFFClose.3t \
	tiffcmp.1 \
	tiffcp.1 \
	tiffdither.1 \
	tiffdump.1 \
	tiffgt.1 \
	tiffinfo.1 \
	tiffmedian.1 \
	tiffsplit.1 \
	tiffsv.1 \
	TIFFcodec.3t \
	TIFFcolor.3t \
	TIFFDataWidth.3t \
	TIFFError.3t \
	TIFFFlush.3t \
	TIFFGetField.3t \
	TIFFmemory.3t \
	TIFFOpen.3t \
	TIFFPrintDirectory.3t \
	TIFFquery.3t \
	TIFFReadDirectory.3t \
	TIFFReadEncodedStrip.3t \
	TIFFReadEncodedTile.3t \
	TIFFReadRawStrip.3t \
	TIFFReadRawTile.3t \
	TIFFReadRGBAImage.3t \
	TIFFReadRGBAStrip.3t \
	TIFFReadRGBATile.3t \
	TIFFReadScanline.3t \
	TIFFReadTile.3t \
	TIFFRGBAImage.3t \
	TIFFSetDirectory.3t \
	TIFFSetField.3t \
	TIFFsize.3t \
	TIFFstrip.3t \
	TIFFswab.3t \
	TIFFtile.3t \
	TIFFWarning.3t \
	TIFFWriteDirectory.3t \
	TIFFWriteEncodedStrip.3t \
	TIFFWriteEncodedTile.3t \
	TIFFWriteRawStrip.3t \
	TIFFWriteRawTile.3t \
	TIFFWriteScanline.3t \
	TIFFWriteTile.3t

EXTRA_DIST = $(man_MANS)

