# Tag Image File Format (TIFF) Software
#
# Copyright (C) 2004, Andrey Kiselev <dron@remotesensing.org>
#
# Permission to use, copy, modify, distribute, and sell this software and 
# its documentation for any purpose is hereby granted without fee, provided
# that (i) the above copyright notices and this permission notice appear in
# all copies of the software and related documentation, and (ii) the names of
# Sam Leffler and Silicon Graphics may not be used in any advertising or
# publicity relating to the software without the specific, prior written
# permission of Sam Leffler and Silicon Graphics.
# 
# THE SOFTWARE IS PROVIDED "AS-IS" AND WITHOUT WARRANTY OF ANY KIND, 
# EXPRESS, IMPLIED OR OTHERWISE, INCLUDING WITHOUT LIMITATION, ANY 
# WARRANTY OF MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.  
# 
# IN NO EVENT SHALL SAM LEFFLER OR SILICON GRAPHICS BE LIABLE FOR
# ANY SPECIAL, INCIDENTAL, INDIRECT OR CONSEQUENTIAL DAMAGES OF ANY KIND,
# OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS,
# WHETHER OR NOT ADVISED OF THE POSSIBILITY OF DAMAGE, AND ON ANY THEORY OF 
# LIABILITY, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE 
# OF THIS SOFTWARE.

# Process this file with automake to produce Makefile.in.

docdir = $(LIBTIFF_DOCDIR)/html/man

docfiles = \
	fax2ps.1.html \
	fax2ps.1.html \
	fax2tiff.1.html \
	fax2tiff.1.html \
	gif2tiff.1.html \
	gif2tiff.1.html \
	index.html \
	index.html \
	libtiff.3t.html \
	libtiff.3t.html \
	pal2rgb.1.html \
	pal2rgb.1.html \
	ppm2tiff.1.html \
	ppm2tiff.1.html \
	ras2tiff.1.html \
	ras2tiff.1.html \
	raw2tiff.1.html \
	raw2tiff.1.html \
	rgb2ycbcr.1.html \
	rgb2ycbcr.1.html \
	sgi2tiff.1.html \
	sgi2tiff.1.html \
	thumbnail.1.html \
	thumbnail.1.html \
	tiff2bw.1.html \
	tiff2bw.1.html \
	tiff2pdf.1.html \
	tiff2pdf.1.html \
	tiff2ps.1.html \
	tiff2ps.1.html \
	tiff2rgba.1.html \
	tiff2rgba.1.html \
	TIFFbuffer.3t.html \
	TIFFbuffer.3t.html \
	TIFFClose.3t.html \
	TIFFClose.3t.html \
	tiffcmp.1.html \
	tiffcmp.1.html \
	TIFFcodec.3t.html \
	TIFFcodec.3t.html \
	TIFFcolor.3t.html \
	TIFFcolor.3t.html \
	tiffcp.1.html \
	tiffcp.1.html \
	TIFFDataWidth.3t.html \
	TIFFDataWidth.3t.html \
	tiffdither.1.html \
	tiffdither.1.html \
	tiffdump.1.html \
	tiffdump.1.html \
	TIFFError.3t.html \
	TIFFError.3t.html \
	TIFFFlush.3t.html \
	TIFFFlush.3t.html \
	TIFFGetField.3t.html \
	TIFFGetField.3t.html \
	tiffgt.1.html \
	tiffgt.1.html \
	tiffinfo.1.html \
	tiffinfo.1.html \
	tiffmedian.1.html \
	tiffmedian.1.html \
	TIFFmemory.3t.html \
	TIFFmemory.3t.html \
	TIFFOpen.3t.html \
	TIFFOpen.3t.html \
	TIFFPrintDirectory.3t.html \
	TIFFPrintDirectory.3t.html \
	TIFFquery.3t.html \
	TIFFquery.3t.html \
	TIFFReadDirectory.3t.html \
	TIFFReadDirectory.3t.html \
	TIFFReadEncodedStrip.3t.html \
	TIFFReadEncodedStrip.3t.html \
	TIFFReadEncodedTile.3t.html \
	TIFFReadEncodedTile.3t.html \
	TIFFReadRawStrip.3t.html \
	TIFFReadRawStrip.3t.html \
	TIFFReadRawTile.3t.html \
	TIFFReadRawTile.3t.html \
	TIFFReadRGBAImage.3t.html \
	TIFFReadRGBAImage.3t.html \
	TIFFReadRGBAStrip.3t.html \
	TIFFReadRGBAStrip.3t.html \
	TIFFReadRGBATile.3t.html \
	TIFFReadRGBATile.3t.html \
	TIFFReadScanline.3t.html \
	TIFFReadScanline.3t.html \
	TIFFReadTile.3t.html \
	TIFFReadTile.3t.html \
	TIFFRGBAImage.3t.html \
	TIFFRGBAImage.3t.html \
	TIFFSetDirectory.3t.html \
	TIFFSetDirectory.3t.html \
	TIFFSetField.3t.html \
	TIFFSetField.3t.html \
	tiffset.1.html \
	TIFFsize.3t.html \
	TIFFsize.3t.html \
	tiffsplit.1.html \
	tiffsplit.1.html \
	TIFFstrip.3t.html \
	TIFFstrip.3t.html \
	tiffsv.1.html \
	tiffsv.1.html \
	TIFFswab.3t.html \
	TIFFswab.3t.html \
	TIFFtile.3t.html \
	TIFFtile.3t.html \
	TIFFWarning.3t.html \
	TIFFWarning.3t.html \
	TIFFWriteDirectory.3t.html \
	TIFFWriteDirectory.3t.html \
	TIFFWriteEncodedStrip.3t.html \
	TIFFWriteEncodedStrip.3t.html \
	TIFFWriteEncodedTile.3t.html \
	TIFFWriteEncodedTile.3t.html \
	TIFFWriteRawStrip.3t.html \
	TIFFWriteRawStrip.3t.html \
	TIFFWriteRawTile.3t.html \
	TIFFWriteRawTile.3t.html \
	TIFFWriteScanline.3t.html \
	TIFFWriteScanline.3t.html \
	TIFFWriteTile.3t.html \
	TIFFWriteTile.3t.html

dist_doc_DATA = $(docfiles)
